--- a/Flaintartist/Base.lproj/LaunchScreen.storyboard
+++ b/Flaintartist/Base.lproj/LaunchScreen.storyboard
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12118" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.17" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.14"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -21,8 +21,14 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Icon" translatesAutoresizingMaskIntoConstraints="NO" id="0Ve-7A-pYh">
+                                <rect key="frame" x="88" y="168" width="200" height="200"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="200" id="8iK-TR-OPw"/>
+                                </constraints>
+                            </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="FLAINT" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sar-6S-WRJ">
-                                <rect key="frame" x="119.5" y="389" width="136" height="30"/>
+                                <rect key="frame" x="120" y="376" width="136" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="136" id="1YE-w3-057"/>
                                 </constraints>
@@ -30,18 +36,14 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="dots" translatesAutoresizingMaskIntoConstraints="NO" id="CUL-9Q-PUP">
-                                <rect key="frame" x="74" y="141" width="227" height="227"/>
-                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="Sar-6S-WRJ" firstAttribute="top" secondItem="CUL-9Q-PUP" secondAttribute="bottom" constant="21" id="Eud-LJ-QXH"/>
-                            <constraint firstItem="CUL-9Q-PUP" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" constant="58" id="M9J-6V-TxG"/>
-                            <constraint firstItem="Sar-6S-WRJ" firstAttribute="centerX" secondItem="CUL-9Q-PUP" secondAttribute="centerX" id="TG3-T2-DDS"/>
-                            <constraint firstItem="CUL-9Q-PUP" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="121" id="Wc3-mi-3lE"/>
-                            <constraint firstItem="CUL-9Q-PUP" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="qlv-eX-ngL"/>
-                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="CUL-9Q-PUP" secondAttribute="bottom" constant="299" id="rp2-Ii-YlZ"/>
+                            <constraint firstItem="0Ve-7A-pYh" firstAttribute="centerX" secondItem="Sar-6S-WRJ" secondAttribute="centerX" id="HP1-Ya-Rlv"/>
+                            <constraint firstItem="0Ve-7A-pYh" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" constant="72" id="L9I-0K-hrf"/>
+                            <constraint firstItem="0Ve-7A-pYh" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="Leq-Bc-YaD"/>
+                            <constraint firstItem="0Ve-7A-pYh" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="148" id="X8S-bC-myd"/>
+                            <constraint firstItem="Sar-6S-WRJ" firstAttribute="top" secondItem="0Ve-7A-pYh" secondAttribute="bottom" constant="8" id="ult-61-W8M"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -51,6 +53,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="dots" width="786" height="710"/>
+        <image name="Icon" width="1024" height="1024"/>
     </resources>
 </document>
